--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "date-format": "0.0.2",
     "lodash": "^4.17.15",
-    "mkdirp": "^1.0.4",
+    "make-dir": "^1.3.0",
     "xmlbuilder": "^10.0.0"
   }
 }
